edit english resource file .

--- a/lib/config/language/resources/app_en.arb
+++ b/lib/config/language/resources/app_en.arb
@@ -13,7 +13,7 @@
    "showLess":"Show Less",
    "email":"Email",
    "address":"Address",
-   "zipCode":"Zip Code";
+   "zipCode":"Zip Code",
    "phoneNumber":"Phone Number",
    "save":"Save",
    "settings":"Settings",
