here is modifications stashed

--- a/lib/config/language/resources/app_ar.arb
+++ b/lib/config/language/resources/app_ar.arb
@@ -1,16 +1,25 @@
 {
-   "loginHeader":"تسجيل الدخول",
-   "loginPhrase":"ابقى متصلا لكي يصلك الجديد ",
-   "username":"اسم المستخدم:",
-   "password":"كلمة المرور:",
-   "loginButton":"الدخول",
-   "loginFailed":"فشل تسجيل الدخول",
-   "loginFailedContent":"اسم المستخدم او كلمة المرور خاطئة حاول مجددا",
-   "homePageTitle":"قائمة المستخدمين",
-   "homePageLoadingText":"جاري البحث",
-   "homePageLoadingFailed":"حصل خطئ اثناء عملية البحث حاول مجددا",
-   "homeFirstNameTxt":": الاسم",
-   "homeLastTxt":": اللقب",
-   "homePagePhoneNumber":": رقم الهاتف",
-   "profileTxt":"الحساب"
+   "loginHeader":"الدخول",
+   "username":":اسم المستخدم",
+   "password":"كلمة المرور :",
+   "register":"سجل",
+   "ifNotUser":"ليس لديك حساب ?",
+   "loginButton":"دخول",
+   "loginFailed":"فشل الدخول!!",
+   "loginFailedContent":"اسم المستخدم او كلمة المرور خاطئة حاول مجددا.",
+   "hi":"مرحبا",
+   "cart":"الطلبية",
+   "showMore":"المزيد",
+   "showLess":" الاقل ",
+   "email":"بريد الالكنتروني",
+   "address":"العنوان",
+   "zipCode":"كود zip",
+   "phoneNumber":"رقم الهاتف",
+   "save":"حفظ",
+   "settings":"الاعدادات",
+   "language":"اللغة",
+   "logout":"تسجيل الخروج",
+   "checkout":"المحاسبة",
+   "fetchDataFailed":"خطأ اثناء جلب البيانات حاول مجددا ",
+   "emptyData":"لاتوجد بيانات"
 }
