adding lang to ui

--- a/lib/config/language/resources/app_ar.arb
+++ b/lib/config/language/resources/app_ar.arb
@@ -21,5 +21,7 @@
    "logout":"تسجيل الخروج",
    "checkout":"المحاسبة",
    "fetchDataFailed":"خطأ اثناء جلب البيانات حاول مجددا ",
-   "emptyData":"لاتوجد بيانات"
+   "emptyData":"لاتوجد بيانات",
+   "editeProfile":"تعديل الملف الشخصي",
+   "fullName":"الاسم الكامل :"
 }
